# napari-pcip

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_pcip/: _pcip.py  napari.yaml
src/napari_pcip/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
